--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 .task-tabs {
     display: flex;
-    border: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     position: relative;
 }
 .task-tabs div {
@@ -27,17 +27,22 @@ body {
     height: 4px;
     background-color: pink;
     position: absolute;
-    width: 62px;
+    width: 60px;
     left: 0;
     top: 52px;
-    padding: 0;
+    padding: 0px;
 }
 
 .task {
+    padding: 1em;
     display: flex;
     justify-content: space-between;
 }
 
 .task-done {
     text-decoration: line-through;
+}
+
+.task-tabs div {
+    cursor: pointer;
 }
